--- a/public/css/qc-sdg.css
+++ b/public/css/qc-sdg.css
@@ -1080,6 +1080,18 @@ hr {
   display: var(--qc-dark-theme-display);
 }
 
+.qc-required {
+  font-size: var(--qc-font-size-md);
+  line-height: var(--qc-line-height-md);
+  font-weight: var(--qc-font-weight-bold);
+  color: var(--qc-color-red-regular);
+}
+
+.qc-disabled {
+  color: var(--qc-color-grey-regular);
+  cursor: not-allowed;
+}
+
 qc-icon {
   display: inline-flex;
   align-items: stretch;
@@ -2198,18 +2210,6 @@ input[type=radio]:checked.qc-compact::before {
   margin-bottom: var(--qc-spacer-sm);
 }
 
-.qc-fieldset-disabled legend {
-  color: var(--qc-color-grey-regular);
-}
-
-.qc-fieldset-required {
-  font-size: var(--qc-font-size-md);
-  line-height: var(--qc-line-height-md);
-  font-weight: var(--qc-font-weight-bold);
-  color: var(--qc-color-red-regular);
-  margin: 0 0 0 0.4rem;
-}
-
 .qc-fieldset-invalid, .qc-checkbox-single.qc-checkbox-single-invalid,
 .qc-fieldset-invalid legend,
 .qc-checkbox-single.qc-checkbox-single-invalid legend {
@@ -2236,6 +2236,11 @@ input[type=radio]:checked.qc-compact::before {
 .qc-field-elements-tiled {
   display: inline-grid;
   grid-template-columns: repeat(var(--column-count), 1fr);
+}
+@media (max-width: 767.98px) {
+  .qc-field-elements-tiled {
+    grid-template-columns: 1fr;
+  }
 }
 
 .qc-field-elements-flex {
@@ -2517,6 +2522,17 @@ qc-textfield {
   outline: 0.1rem solid rgba(var(--qc-color-blue-dark-rgb), 50%);
   border-radius: 50%;
   transition: all 0.3s ease-out;
+}
+
+.qc-label {
+  font-weight: var(--qc-font-weight-content-medium);
+  display: block;
+}
+.qc-label.qc-label-compact {
+  font-size: var(--qc-font-size-sm);
+}
+.qc-label.qc-label-bold {
+  font-weight: var(--qc-font-weight-content-bold);
 }
 
 .qc-dropdown-list {
