--- a/public/css/qc-sdg-no-grid.css
+++ b/public/css/qc-sdg-no-grid.css
@@ -104,8 +104,12 @@
   --qc-color-pink-regular-rgb: 229, 130, 113;
   --qc-color-red-pale: var(--qc-color-pink-pale);
   --qc-color-red-light: var(--qc-color-pink-regular);
+  --qc-color-red-regular_light: #eb705a;
+  --qc-color-red-regular_light-rgb: 235, 112, 90;
   --qc-color-red-regular: #cb381f;
   --qc-color-red-regular-rgb: 203, 56, 31;
+  --qc-color-red-medium: #b52e16;
+  --qc-color-red-medium-rgb: 181, 46, 22;
   --qc-color-red-dark: #692519;
   --qc-color-red-dark-rgb: 105, 37, 25;
   --qc-color-green-pale: #d7f0bb;
@@ -229,8 +233,12 @@
   --qc-color-pink-pale-rgb: 79, 24, 14;
   --qc-color-pink-regular: #BB3A23;
   --qc-color-pink-regular-rgb: 187, 58, 35;
+  --qc-color-red-regular_light: #D34027;
+  --qc-color-red-regular_light-rgb: 211, 64, 39;
   --qc-color-red-regular: #F26049;
   --qc-color-red-regular-rgb: 242, 96, 73;
+  --qc-color-red-medium: #F19387;
+  --qc-color-red-medium-rgb: 241, 147, 135;
   --qc-color-red-dark: #F3BCB6;
   --qc-color-red-dark-rgb: 243, 188, 182;
   --qc-color-green-pale: #1E2F17;
@@ -381,8 +389,16 @@ body:focus-within {
   background-color: var(--qc-color-red-light);
 }
 
+.qc-bg-color-red-regular_light {
+  background-color: var(--qc-color-red-regular_light);
+}
+
 .qc-bg-color-red-regular {
   background-color: var(--qc-color-red-regular);
+}
+
+.qc-bg-color-red-medium {
+  background-color: var(--qc-color-red-medium);
 }
 
 .qc-bg-color-red-dark {
@@ -2373,6 +2389,8 @@ qc-textfield {
   background: transparent;
   padding: 0.8rem 0.8rem;
   border: 0;
+  text-overflow: ellipsis;
+  overflow: hidden;
 }
 .qc-textfield input[type=text]::-moz-placeholder, .qc-textfield textarea::-moz-placeholder {
   color: var(--qc-color-grey-medium);
@@ -2388,24 +2406,31 @@ qc-textfield {
 .qc-textfield textarea:focus-visible {
   outline: none;
 }
+.qc-textfield input[type=text]:focus::-moz-placeholder, .qc-textfield input[type=text]:focus-visible::-moz-placeholder, .qc-textfield textarea:focus::-moz-placeholder, .qc-textfield textarea:focus-visible::-moz-placeholder {
+  color: transparent;
+}
+.qc-textfield input[type=text]:focus::placeholder, .qc-textfield input[type=text]:focus-visible::placeholder,
+.qc-textfield textarea:focus::placeholder,
+.qc-textfield textarea:focus-visible::placeholder {
+  color: transparent;
+}
 .qc-textfield textarea {
   min-height: 10.8rem;
   resize: vertical;
 }
 .qc-textfield--sm {
-  width: 6.3rem;
+  max-width: 6.3rem;
 }
 .qc-textfield--md {
-  width: 15.6rem;
+  max-width: 15.6rem;
 }
 .qc-textfield--lg {
-  width: 24.9rem;
+  max-width: 24.9rem;
 }
 .qc-textfield--xl {
-  width: 52.8rem;
+  max-width: 52.8rem;
 }
 .qc-textfield--xxl {
-  width: 100%;
   max-width: 82.5rem;
 }
 .qc-textfield.error::before {
@@ -2419,9 +2444,12 @@ qc-textfield {
 .qc-textfield-container label {
   margin-bottom: 0.4rem;
 }
-.qc-textfield-container.disabled label {
+.qc-textfield-container.qc-disabled label {
   color: var(--qc-color-grey-regular);
   cursor: not-allowed;
+}
+.qc-textfield-container.qc-disabled .qc-textfield-description {
+  color: var(--qc-color-grey-regular);
 }
 
 .qc-textfield-required {
@@ -2431,7 +2459,10 @@ qc-textfield {
 
 .qc-textfield-description {
   font-size: var(--qc-font-size-sm);
-  color: var(--qc-color-grey-medium);
+  color: var(--qc-color-blue-dark);
+  height: 2rem;
+  line-height: 2rem;
+  margin-bottom: 0.4rem;
 }
 
 .qc-textfield.disabled::before {
@@ -2447,12 +2478,23 @@ qc-textfield {
 .qc-textfield-charcount {
   text-align: right;
   margin-top: 0.4rem;
-  color: var(--qc-color-grey-medium);
+  color: var(--qc-color-blue-dark);
   font-size: var(--qc-font-size-sm);
+  height: 2rem;
+  line-height: 2rem;
 }
 .qc-textfield-charcount.max-reached {
   color: var(--qc-color-red-regular);
   font-weight: bold;
+}
+
+.qc-textfield-row {
+  display: flex;
+  gap: 3.2rem;
+}
+.qc-textfield-row > qc-textfield {
+  display: block;
+  width: auto;
 }
 
 .qc-form-error {
@@ -2497,7 +2539,6 @@ qc-textfield {
 }
 .qc-switch input[type=checkbox]:checked ~ .qc-switch-slider::before {
   transform: translateX(2.4rem);
-  outline: 0.1rem solid var(--qc-color-blue-piv);
 }
 .qc-switch input[type=checkbox]:focus ~ .qc-switch-slider {
   outline: 0.2rem solid var(--qc-color-blue-light);
@@ -2508,7 +2549,7 @@ qc-textfield {
   cursor: not-allowed;
 }
 .qc-switch input[type=checkbox]:disabled ~ .qc-switch-slider::before {
-  outline: transparent;
+  border: none;
 }
 
 .qc-switch-label {
@@ -2541,12 +2582,12 @@ qc-textfield {
 .qc-switch-slider::before {
   position: absolute;
   content: "";
-  height: 2.6rem;
-  width: 2.6rem;
-  left: 0.2rem;
-  bottom: 0.2rem;
+  height: 2.8rem;
+  width: 2.8rem;
+  left: 0.1rem;
+  bottom: 0.1rem;
   background-color: var(--qc-color-white);
-  outline: 0.1rem solid #464F5B;
+  border: 0.1rem solid var(--qc-color-grey-dark);
   border-radius: 50%;
   transition: all 0.3s ease-out;
 }
@@ -2766,4 +2807,163 @@ qc-textfield {
 
 .qc-dropdown-list-hidden {
   display: none;
+}
+
+.qc-button {
+  font-family: var(--qc-font-family-content);
+  font-size: var(--qc-font-size-md);
+  font-weight: var(--qc-font-weight-bold);
+  line-height: var(--qc-line-height-md);
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  gap: 0.8rem;
+  box-sizing: border-box;
+  min-width: 11.2rem;
+  max-width: 36rem;
+  min-height: 5.6rem;
+  padding: 1.6rem 2.4rem;
+  transition: all 0.24s ease-in-out;
+  vertical-align: middle;
+  border: 2px solid transparent;
+  cursor: pointer;
+  margin-right: 3.2rem;
+  margin-bottom: var(--qc-spacer-md);
+}
+@media (max-width: 767.98px) {
+  .qc-button {
+    width: 100%;
+  }
+}
+.qc-button.qc-compact {
+  font-weight: var(--qc-font-weight-semi-bold);
+  min-width: 8rem;
+  min-height: 4rem;
+  padding: 0.8rem 1.6rem;
+  border-width: 1px;
+}
+@media (max-width: 767.98px) {
+  .qc-button.qc-compact {
+    width: 100%;
+  }
+}
+.qc-button.qc-button-rounded {
+  border-radius: 0.4rem;
+}
+.qc-button.qc-primary {
+  color: var(--qc-color-white);
+  background-color: var(--qc-color-blue-piv);
+  border-color: var(--qc-color-blue-piv);
+  box-shadow: 0 1px 4px rgba(34, 54, 84, 0.24);
+}
+.qc-button.qc-primary:hover:not(:disabled) {
+  background-color: var(--qc-color-blue-regular);
+  border-color: var(--qc-color-blue-regular);
+}
+.qc-button.qc-primary:focus:not(:disabled) {
+  background-color: var(--qc-color-blue-regular);
+  border-color: var(--qc-color-blue-dark);
+  box-shadow: 0 2px 8px rgba(34, 54, 84, 0.24), 0 0 0 2px var(--qc-color-blue-light);
+}
+.qc-button.qc-primary:active:not(:disabled) {
+  background-color: var(--qc-color-blue-regular_light);
+  border-color: var(--qc-color-blue-regular_light);
+}
+.qc-button.qc-secondary {
+  color: var(--qc-color-blue-piv);
+  background-color: var(--qc-color-white);
+  border-color: var(--qc-color-blue-piv);
+}
+.qc-button.qc-secondary:hover:not(:disabled), .qc-button.qc-secondary:focus:not(:disabled), .qc-button.qc-secondary:active:not(:disabled) {
+  background-color: rgba(9, 87, 151, 0.16);
+}
+.qc-button.qc-secondary:focus:not(:disabled) {
+  border-color: var(--qc-color-blue-dark);
+  box-shadow: 0 0 0 2px var(--qc-color-blue-light);
+}
+.qc-button.qc-secondary:active:not(:disabled) {
+  background-color: rgba(9, 87, 151, 0.08);
+}
+.qc-button.qc-tertiary {
+  color: var(--qc-color-blue-piv);
+  background-color: var(--qc-color-white);
+  border-color: var(--qc-color-white);
+}
+.qc-button.qc-tertiary:hover:not(:disabled) {
+  background-color: rgba(197, 202, 210, 0.24);
+  text-decoration: underline;
+}
+.qc-button.qc-tertiary:focus:not(:disabled) {
+  background-color: rgba(197, 202, 210, 0.24);
+  border-color: var(--qc-color-blue-dark);
+  box-shadow: 0 0 0 2px var(--qc-color-blue-light);
+}
+.qc-button.qc-tertiary:active:not(:disabled) {
+  background-color: rgba(197, 202, 210, 0.16);
+}
+.qc-button.qc-danger {
+  color: var(--qc-color-white);
+  background-color: var(--qc-color-red-regular);
+  border-color: var(--qc-color-white);
+}
+.qc-button.qc-danger:hover:not(:disabled) {
+  background-color: var(--qc-color-red-medium);
+}
+.qc-button.qc-danger:focus:not(:disabled) {
+  background-color: var(--qc-color-red-medium);
+  border-color: var(--qc-color-blue-dark);
+  box-shadow: 0 0 0 2px var(--qc-color-blue-light);
+}
+.qc-button.qc-danger:active:not(:disabled) {
+  background-color: var(--qc-color-red-regular_light);
+}
+.qc-button:disabled, .qc-button.qc-disabled {
+  background-color: var(--qc-color-grey-light);
+  border-color: var(--qc-color-grey-light);
+  color: var(--qc-color-white);
+  cursor: not-allowed;
+  box-shadow: none;
+  opacity: 1;
+}
+.qc-button .qc-icon {
+  display: inline-block;
+  width: 1.6rem;
+  height: 1.6rem;
+  background-color: currentColor;
+  -webkit-mask-size: 100% 100%;
+          mask-size: 100% 100%;
+  -webkit-mask-repeat: no-repeat;
+          mask-repeat: no-repeat;
+  flex-shrink: 0;
+}
+.qc-button .qc-icon.qc-custom-icon {
+  -webkit-mask: var(--img-src);
+          mask: var(--img-src);
+  -webkit-mask-size: 100% 100%;
+          mask-size: 100% 100%;
+}
+.qc-button.qc-simple {
+  color: var(--qc-color-blue-piv);
+  background-color: transparent;
+  border-color: transparent;
+  padding: 0;
+  min-width: unset;
+  min-height: unset;
+}
+.qc-button.qc-simple:hover:not(:disabled), .qc-button.qc-simple:active:not(:disabled) {
+  text-decoration: underline;
+}
+.qc-button.qc-simple:focus:not(:disabled) {
+  border-color: var(--qc-color-blue-light);
+  box-shadow: 0 0 0 2px var(--qc-color-blue-light);
+}
+.qc-button.qc-simple.qc-compact {
+  font-size: var(--qc-font-size-sm);
+  line-height: var(--qc-line-height-sm);
+}
+.qc-button.qc-simple:disabled, .qc-button.qc-simple.qc-disabled {
+  color: var(--qc-color-grey-regular);
+  cursor: not-allowed;
+  box-shadow: none;
+  opacity: 1;
 }
