--- a/src/sdg/components/TextField/_textField.scss
+++ b/src/sdg/components/TextField/_textField.scss
@@ -36,27 +36,12 @@ $sizes: (
 }
 
 input,
-textarea,
-.qc-textfield-charcount {
-  max-width: rem(map.get($sizes, md));
-  @include size($sizes);
-  @include media-tablet() {
-    @include size($sizes, tablet);
-  }
-  @include media-desktop() {
-    @include size($sizes,desktop);
-  }
-  @include media-large-desktop() {
-    @include size($sizes, large-desktop);
-  }
-}
-
-input,
 textarea {
   .qc-textfield &,
   qc-textfield & {
     display: block;
     width: 100%;
+    max-width: rem(map.get($sizes, lg));
     position: relative;
     color: token-value(color text primary);
     padding: rem(8);
@@ -90,6 +75,21 @@ textarea {
     padding: rem(7);
   }
 
+}
+
+input,
+textarea,
+.qc-textfield-charcount {
+  @include size($sizes);
+  @include media-tablet() {
+    @include size($sizes, tablet);
+  }
+  @include media-desktop() {
+    @include size($sizes,desktop);
+  }
+  @include media-large-desktop() {
+    @include size($sizes, large-desktop);
+  }
 }
 
 textarea {
