--- a/src/sdg/components/ExternalLink/externalLinkBaselineTest.html
+++ b/src/sdg/components/ExternalLink/externalLinkBaselineTest.html
@@ -1,7 +1,7 @@
 <div style="border: 1px solid var(--qc-color-text-primary); padding: var(--qc-spacer-sm); max-width: 376px;">
     <p>
         <qc-external-link>
-            <a href="https://can01.safelinks.protection.outlook.com/?url=https%3A%2F%2Fwww.quebec.ca%2Fgouvernement%2Fministere%2Ftravail%2Flois-reglements%23c335465&amp;data=05%7C02%7CNathaly.Dufour%40mess.gouv.qc.ca%7C709defe5593b4d95806208dd50681cb3%7C0331467c063c49d0bdba898ee71533e6%7C0%7C0%7C638755130267593991%7CUnknown%7CTWFpbGZsb3d8eyJFbXB0eU1hcGkiOnRydWUsIlYiOiIwLjAuMDAwMCIsIlAiOiJXaW4zMiIsIkFOIjoiTWFpbCIsIldUIjoyfQ%3D%3D%7C0%7C%7C%7C&amp;sdata=cDc5bRYLruwI6B7cCsbeQC0%2FjOuA%2BMEAYHF6tTlfIkQ%3D&amp;reserved=0"
+            <a href="#multi-links"
                target="_blank"
                rel="noreferrer nofollow"
                data-external-link="true"
